tests/cases/discard_variable/error/print_discard.cb
// エラー: discard変数をprintで出力
void main() {
    string _ = "hidden";
    println(_); // エラー: Cannot reference discard variable '_'
}
